--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -22,7 +22,7 @@ java_mem: 32
 # can be a subset of threads or altered if rule run_spades or run_megahit are being defined differently in your cluster configuration
 assembly_threads: 8
 # in GB
-assembly_memory: 50
+assembly_memory: 250
 # Local directory for temp files, useful for cluster execution without shared file system
 tmpdir: /tmp
 # directory where databases are downloaded with 'atlas download'
@@ -104,7 +104,7 @@ megahit_preset: default
 # Spades
 #------------
 spades_skip_BayesHammer: False
-spades_use_scaffolds: false # otherwise use contigs
+spades_use_scaffolds: true # otherwise use contigs
 #Comma-separated list of k-mer sizes to be used (all values must be odd, less than 128 and listed in ascending order).
 spades_k: auto
 spades_preset: meta    # meta, ,normal, rna  single end libraries doesn't work for metaspades
@@ -183,11 +183,24 @@ genome_dereplication:
       N50: 0.5
       length: 0
 
+########################
+# taxonomy
+#######################
+# Diamond needs up to 100 GB of memory for building the taxonomy database
+# If you prefer you can dowload an existing CAT database, see docs.
+diamond_mem: 100
+diamond_threads: 12
+# number of top hits considered for taxonomic annotation
+cat_range: 5
+# fraction of support needed for classification, <0.5 can give rise to duble classification.
+cat_fraction: 0.3
+
 
 ########################
 # Gene catalog
 #######################
 genecatalog:
+  source: genomes  # which predicted proteins should be used for the gene catalog
   clustermethod: linclust # cd-hit-est or cluster or linclust see mmseqs for more details
   minlength_nt: 100
   minid: 0.95
