--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -117,13 +117,13 @@ def get_quality_controlled_reads(wildcards):
                 expand("{{sample}}/sequence_quality_control/{{sample}}_QC_{fraction}.fastq.gz",
                     fraction=MULTIFILE_FRACTIONS)))
 
-
+include: "rules/download.snakefile" # contains hard coded variables
 include: "rules/qc.snakefile"
 include: "rules/assemble.snakefile"
 include: "rules/binning.snakefile"
 include: "rules/genecatalog.snakefile"
 include: "rules/cat_taxonomy.smk"
-include: "rules/download.snakefile"
+
 
 
 localrules: all, qc, assembly_one_sample, assembly, genomes
