--create-envs-only for qc

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
       - run: .test/dryrun.sh
       - run: rm -rf $WORKING_DIR
       - run: atlas init --db-dir $DATABASE_DIR --threads $N_THREADS -w $WORKING_DIR example_data
+      - run: atlas run qc -w $WORKING_DIR --create-envs-only
       - run: atlas run qc -w $WORKING_DIR --config java_mem=$MEM assembly_mem=$MEM
       #- run: atlas run assemble -w $WORKING_DIR
 #      - run: atlas run
