--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,9 @@ jobs:
       - run: atlas init --db-dir $DATABASE_DIR --threads $N_THREADS -w $WORKING_DIR example_data
       - run: atlas run qc -w $WORKING_DIR --create-envs-only
       - run: atlas run qc -w $WORKING_DIR --config java_mem=$MEM assembly_mem=$MEM
-      #- run: atlas run assemble -w $WORKING_DIR
-#      - run: atlas run
+      - run: atlas run assemble -w $WORKING_DIR --create-envs-only
+      - run: atlas run assemble -w $WORKING_DIR --config java_mem=$MEM assembly_mem=$MEM
+      - run: atlas run --create-envs-only
 
 workflows:
   version: 2
