check if logs/checkm_init.txt can be created on server #181

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
       - run: rm -rf $WORKING_DIR
       - run: atlas init --db-dir $DATABASE_DIR --threads $N_THREADS -w $WORKING_DIR example_data
       - run: atlas run all -w $WORKING_DIR --create-envs-only
+      - run: atlas run None -w $WORKING_DIR logs/checkm_init.txt
       - run: atlas run qc -w $WORKING_DIR --config java_mem=$MEM assembly_mem=$MEM
 
 
